--- a/inicial/index.html
+++ b/inicial/index.html
@@ -15,26 +15,32 @@
             <div class="logo">
                 Amigo Pet
             </div>
-
             <div class="menu">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Meus pets</a></li>
                     <li><a href="#">Sobre</a></li>
                     <li><a href="#">Dicas</a></li>
-                    <li><a href="#"><i class="fas fa-user"></i></a>
+                    <li><a href="#"><i class="far fa-user"></i></a>
                 </ul>
             </div>
         </div>
     </div>
+   <div class= "title">
+        <h2 class="title">Nome</h2]>
+</div>
     <div class="card">
-          <h4><b>gato</b></h4>
-          <img src="gato.png" alt="Animal" style="widows: 100px;">
-          <p class="subtitle">Tipo:</p>
-        <p class="subtitle">Raça</p>
-        <p class="subtitle">Sexo:</p>
-        <p class="subtitle">Descrição:</p>
-        <button>Adotar</button>
+            <h1><b>MIAU</b></h1>
+        <img src="gato.png" alt="Avatar" style="width:100%">
+        <hr>
+        <div class="container">
+          <p class="Descrição"><b>Tipo:</b></p>
+          <p class="Descrição"><b>Raça:</b></p>
+          <p class="Descrição"><b>Sexo:</b></p>
+          <p class="Descrição"><b>Descrição:</b></p>
+          <div class="button">
+          <button>Adotar</button>
+        </div>
         </div>
       </div>
 </body>
